# test-streamlit-app

./: .gitignore  pyproject.toml  requirements.txt  streamlit-app.py
