[tool.poetry]
name = "test-streamlit-app"
version = "0.1.0"
description = ""
authors = ["Pedro Teófilo Ramos <pedrotramos97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
ipykernel = "^6.26.0"
requests = "^2.31.0"
snowflake-connector-python = "^3.3.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
